manifests/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: azure-voting-app
  name: azure-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-voting-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: azure-voting-app
    spec:
      imagePullSecrets:
      - name: ghcr-login-secret
      containers:
      - image: ghcr.io/anulok99/helloworld:1.0 
        name: azure-voting-app-rust
        ports:
        - containerPort: 8080
        resources: {}
status: {}
