manifests/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: azure-voting-app
  name: azure-voting-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8079
  selector:
    app: azure-voting-app
  type: ClusterIP
status:
  loadBalancer: {}
